--- a/index.html
+++ b/index.html
@@ -1,364 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Somewhere between data science and data engineering">
-    <meta name="author" content="Ken Hu">
-
-    <title>Ken Hu</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/agency.min.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,500,700,900' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:100,400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body id="page-top" class="index">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Ken <span class="thin">Hu</span></a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a title="Tech" href="tech"><i class="fa fa-server"></i></a></li>
-                    <li><a title="Tech" target="_blank" href="https://photos.app.goo.gl/MYSUr9NrvAabRbyWA"><i class="fa fa-paint-brush"></i></a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#projects">Projects</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#cv">CV</a>
-                    </li>
-                    <!--<li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>-->
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">Peiken "Ken" Hu</div>
-                <div class="intro-heading">Language and Mind</div>
-            </div>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Who I am</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <p class="text-muted">I am an independent researcher, with interests in the philosophy of language and theory of mind. I receieved my MA at <a href="https://www.newschool.edu/nssr/" target="_blank">The New School for Social Research</a> in Liberal Studies, with a focus on interdisciplinary understandings of language. I also have a soft spot for phenomenology, animal ethics, and Shakespeare.</p>
-                </div>
-                <div class="col-md-6">
-                    <p class="text-muted">In a <a href="/tech">previous</a> life, I was a data scientist and engineer. I initially received a BSc in Information Sciences and Technology from <a href="https://www.ist.psu.edu/" target="_blank">Pennsyania State University</a>, then my MSc in Artificial Intelligence at the <a href="https://informatics.ed.ac.uk/" target="_blank">University of Edinburgh</a>. As a part of that career, I've also founded a startup specializing in <a href="https://vimeo.com/53933443" target="_blank">natural language processing</a> in the Chinese language.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Project Grid Section -->
-    <section id="projects" class="portfolio bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Projects</h2>
-                    <h3 class="section-subheading text-muted">Some projects I've worked on</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://publicseminar.org/author/khu/" class="portfolio-link">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-external-link fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/pencil.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Public Seminar</h4>
-                        <p class="text-muted">Contributions to NSSR's public discourse platform</p>
-                    </div>
-                </div>
-                <!--
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolio-decisive" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/pencil.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Publication</h4>
-                        <p class="text-muted">Title</p>
-                    </div>
-                </div>
-                -->
-            </div>
-        </div>
-    </section>
-
-    <!-- CV Section -->
-    <section id="cv">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">CV</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li class="timeline">
-                            <div class="timeline-image">
-                                <h4><br />2025-</h4>
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Philosophy of language and theory of mind</h4>
-                                    <h4 class="subheading">Independent Researcher</h4>
-                                </div>
-                                <div class="timeline-body">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4><br />2018-2024</h4>
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Data Science and Engineering</h4>
-                                    <h4 class="subheading">Senior Machine Learning Engineer, Independent Consultant</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <ul class="text-muted">
-                                        <li>Review and design machine learning experiments</li>
-                                        <li>Lead teams of data analysts, scientists, and engineers</li>
-                                        <li>Designed an original <a href="https://builtin.com/machine-learning/agile-machine-learning-development" target="_blank">development process</a> for commerical machine learning</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline">
-                            <div class="timeline-image">
-                                <h4><br />2019-22</h4>
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4><a href="https://www.newschool.edu/nssr/" target="_blank">The New School for Social Research</a></h4>
-                                    <h4 class="subheading">MA, Liberal Studies</h4>
-                                    <div class="timeline-body">
-                                        <ul class="text-muted">
-                                            <li>Contributions to NSSR online discourse platform <a href="https://publicseminar.org/" target="_blank">Public Seminar</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4><br />2010-2018</h4>
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Machine Learning and Data Engineering</h4>
-                                    <h4 class="subheading">Developer, Data Scientist, Data Engineer, VP of Engineering</h4>
-                                </div>
-                                <div class="timeline-body">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline">
-                            <div class="timeline-image">
-                                <h4><br />2012-13</h4>
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Soshio</h4>
-                                    <h4 class="subheading">Founder, CTO</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <ul class="text-muted">
-                                        <li>Developed proprietary machine learning engine for analyzing the Chinese language</li>
-                                        <li>Represented the team in conferences and media</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4><br />2009-10</h4>
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4><a href="https://informatics.ed.ac.uk/" target="_blank">University of Edinburgh</a></h4>
-                                    <h4 class="subheading">MSc, Artificial Intelligence, Learning from Data</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <ul class="text-muted">
-                                        <li>Finalist for 2010 Scottish Institute for Enterprise New Idea Competition in Science, Engineering, Technology category</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline">
-                            <div class="timeline-image">
-                                <h4><br />2007-09</h4>
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Hewlett Packard</h4>
-                                    <h4 class="subheading">Software Engineer</h4>
-                                </div>
-                                <div class="timeline-body">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4><br />2003-07</h4>
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4><a href="https://www.ist.psu.edu/" target="_blank">Pennsylvania State University, University Park</a></h4>
-                                    <h4 class="subheading">BSc, Information Science and Techology, Design and Development</h4>
-                                </div>
-                                <div class="timeline-body">
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <!--<section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading heading-inverted">Contact</h2>
-                    <h3 class="section-subheading heading-inverted">Let's connect!</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center outro-body">
-                    <p>Please don't hesitate to reach out if you have any enquiries!</p>
-                    <p><a class="btn btn-primary" href="mailto:whosken@duck.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a></p>
-                </div>
-            </div>
-        </div>
-    </section>-->
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <span class="copyright">Made with <i class="fa fa-heart"></i> by <a href="#page-top" class="page-scroll">Ken Hu</a>. Copyright © 2024. All Rights Reserved</span>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Portfolio Modals -->
-    <!-- Use the modals below to showcase details about your portfolio projects! -->
-
-    <div class="portfolio-modal modal fade" id="portfolio-decisive" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <!-- Project Details Go Here -->
-                            <h2>Publication</h2>
-                            <p class="item-intro text-muted">Title</p>
-                            <ul class="list-inline">
-                                <li>Date</li>
-                                <li>Issue</li>
-                            </ul>
-                            <p>Abstract</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/agency.js"></script>
-
-</body>
-
-</html>
+<script src="https://gist.github.com/whosken/508c27ef6f3b6df18ab570f0dd1a47ba.js"></script>
