--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<script src="https://gist.github.com/whosken/508c27ef6f3b6df18ab570f0dd1a47ba.js"></script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ken Hu</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+  </head>
+  <body>
+  <section class="section">
+    <div class="container">
+      <script src="https://gist.github.com/whosken/508c27ef6f3b6df18ab570f0dd1a47ba.js"></script>
+    </div>
+  </section>
+  </body>
+</html>
